[project]
name = "luna-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "bottle==0.13.2",
    "bottle-websocket==0.2.9",
    "buildozer==1.5.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comtypes==1.4.9",
    "distlib==0.3.9",
    "eel==0.16.0",
    "enum34==1.1.10",
    "filelock==3.17.0",
    "flask==3.1.0",
    "future==1.0.0",
    "gevent==24.11.1",
    "gevent-websocket==0.10.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.1",
    "google-api-python-client==2.160.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.4",
    "googleapis-common-protos==1.66.0",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "httplib2==0.22.0",
    "hugchat==0.4.18",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "mouseinfo==0.1.3",
    "numpy==2.2.2",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pip==25.0",
    "platformdirs==4.3.6",
    "playsound==1.2.2",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "ptyprocess==0.7.0",
    "pvporcupine==1.9.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pyaudio==0.2.14",
    "pyautogui==0.9.54",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pyparsing==3.2.1",
    "pyperclip==1.9.0",
    "pypiwin32==223",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dotenv>=1.1.1",
    "pyttsx3==2.98",
    "pytweening==1.2.0",
    "pywhatkit==5.4",
    "pywin32==308",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9",
    "setuptools==75.8.0",
    "sh==2.2.1",
    "soupsieve==2.6",
    "speechrecognition==3.14.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "virtualenv==20.29.1",
    "werkzeug==3.1.3",
    "whichcraft==0.6.1",
    "wikipedia==1.4.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]
